# ArgParser

./: .gitignore  .project  EasyConsole.cabal  LICENSE  README.md  argparser.cabal
src/: Main.hs
src/System/Console/: ArgParser.hs  EasyConsole.hs
src/System/Console/ArgParser/: ArgsProcess.hs  BaseType.hs  Format.hs  Params.hs  Parser.hs  QuickParams.hs  Run.hs  SubParser.hs
src/System/Console/EasyConsole/: ArgsProcess.hs  BaseType.hs  Format.hs  Params.hs  Parser.hs  QuickParams.hs  Run.hs  SubParser.hs
tests/: Tests.hs  TestsHTF.hs
tests/System/Console/: ArgParserTest.hs  EasyConsoleTest.hs
tests/System/Console/ArgParser/: ArgsProcessTest.hs  FormatTest.hs  FullTest.hs  ParserTest.hs  QuickParamsTest.hs  RunTest.hs  SubParserTest.hs  TestHelpers.hs
tests/System/Console/EasyConsole/: ArgsProcessTest.hs  FormatTest.hs  ParserTest.hs  QuickParamsTest.hs  RunTest.hs  SubParserTest.hs  TestHelpers.hs
