name:           EasyConsole
version:        0.1.5
cabal-version:  >=1.8
build-type:     Simple
author:         Simon Bergot <simon.bergot@gmail.com>
stability:      unstable
maintainer:     Simon Bergot <simon.bergot@gmail.com>
license:        BSD3
category:       Console
synopsis:       Command line parsing framework for console applications
description:    Provides a combinator library for defining a command line parser.
license-file:   LICENSE

library 
  build-depends:    
                   base >= 4 && < 4.7,
                   containers
  hs-source-dirs:   src
  ghc-options:      -Wall
  other-modules:    
                   System.Console.EasyConsole.ArgsProcess,
                   System.Console.EasyConsole.Format,
                   System.Console.EasyConsole.QuickParams
  exposed-modules:  
                    System.Console.EasyConsole,
                    System.Console.EasyConsole.BaseType,
                    System.Console.EasyConsole.Params,
                    System.Console.EasyConsole.Parser,
                    System.Console.EasyConsole.Run,
                    System.Console.EasyConsole.SubParser

source-repository head
  type:      git
  location:  https://github.com/sbergot/EasyConsole

test-suite TestsHTF
  type:            exitcode-stdio-1.0
  main-is:         TestsHTF.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                  base >= 4,
                  HTF > 0.9,
                  EasyConsole,
                  containers,
                  HUnit
  other-modules:   
                  System.Console.EasyConsole.RunTest,
                  System.Console.EasyConsole.Format,
                  System.Console.EasyConsole.FormatTest,
                  System.Console.EasyConsoleTest,
                  System.Console.EasyConsole.SubParserTest,
                  System.Console.EasyConsole.QuickParams,
                  System.Console.EasyConsole.QuickParamsTest,
                  System.Console.EasyConsole.ParserTest,
                  System.Console.EasyConsole.ArgsProcess,
                  System.Console.EasyConsole.ArgsProcessTest,
                  System.Console.EasyConsole.TestHelpers
  hs-source-dirs:  
                  tests,
                  src

